# openbb-widgets

./: .gitignore  README.md  backends-for-openbb  config.py  config.yaml  main.py  pyproject.toml  registry.py
documents/: apps.json  widgets.json
util/: configure_logging.py
utils/: plotly_config.py
via_nexus/: dataset.py
vianexus/: __init__.py  dataset.py  schemas.py
widgets/: __init__.py  hello_world.py  stock_chart.py  stock_stats.py
